--- a/_config.yml
+++ b/_config.yml
@@ -28,3 +28,6 @@ author:
     - label: "GitHub"
       icon: "fab fa-github"
       url: "https://github.com/sachin19183"
+    - label: "Path of the Silent Warrior"
+      icon: "fas fa-fire"
+      url: "https://sachin19183.github.io/path-of-the-silent-warrior/"
